--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="root"></div>
-
+    <div id="footer-root"></div>
     <script
       src="https://kit.fontawesome.com/cc28b3bda6.js"
       crossorigin="anonymous"
